--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ballyhoo",
-    "slug": "ballyhoo",
+    "name": "Explore",
+    "slug": "explore",
     "privacy": "public",
     "sdkVersion": "32.0.0",
     "platforms": [
